--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
 </head>
+
 <body>
     <header>
         <section class="header-icons-container">
@@ -21,12 +23,26 @@
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href=""><img src="https://uc3a68edfd6d96b88ded70fa5e0a.previews.dropboxusercontent.com/p/thumb/ABPRI_uQnXVseOUheN5_bUSlYD9glQ7ILwAP5lbgiEL8j6-TfBjIds2v4A2Z8G3me-M6LT61dp6KZ6Pd0Mj55TesqqHHIduiN5KZgeMV185YLIxOuTE1o31Tshvj9s64bh3N-foSVFj9x6mOoYncXpM-RjkoCYihJQWho_QKhLmQV8Xfj7hJrL0z7PU_M8CuwsRPsblwQ70mEG0lKLvrftMuB6d2palaWSyw1SYtUU0byBekTuuJ9rpwpenxpk8GGSsW0V_VmLUeFA1maIPBisH8bHVl6N-zBm4hAKcsKEsl5PMxt45dqin3cEuGD0Bt2e42MO0-52AhFPGZh3vXtuEJNqfBIYixa0c2r-u5wSHETw/p.png?fv_content=true&size_mode=5" alt="Logo de mi blog"></a>
+                <a href=""><img
+                        src="https://uc3a68edfd6d96b88ded70fa5e0a.previews.dropboxusercontent.com/p/thumb/ABPRI_uQnXVseOUheN5_bUSlYD9glQ7ILwAP5lbgiEL8j6-TfBjIds2v4A2Z8G3me-M6LT61dp6KZ6Pd0Mj55TesqqHHIduiN5KZgeMV185YLIxOuTE1o31Tshvj9s64bh3N-foSVFj9x6mOoYncXpM-RjkoCYihJQWho_QKhLmQV8Xfj7hJrL0z7PU_M8CuwsRPsblwQ70mEG0lKLvrftMuB6d2palaWSyw1SYtUU0byBekTuuJ9rpwpenxpk8GGSsW0V_VmLUeFA1maIPBisH8bHVl6N-zBm4hAKcsKEsl5PMxt45dqin3cEuGD0Bt2e42MO0-52AhFPGZh3vXtuEJNqfBIYixa0c2r-u5wSHETw/p.png?fv_content=true&size_mode=5"
+                        alt="Logo de mi blog"></a>
             </section>
             <section class="profile-link">
                 <a href="profile.html">Sobre mí</a>
             </section>
         </nav>
     </header>
+    <main class="home-main">
+        <section>
+            <p class="home-main-text">
+                CONOCE LAS NOVEDADES Y <br>
+                NOTICIAS DEL MUNDO TECNOLÓGICO
+            </p>
+            <button class="home-main-button">
+                <a href="./blogs.html" class="home button">¡Entra ya!</a>
+            </button>
+        </section>
+    </main>
 </body>
+
 </html>
