Terminando el home

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     <main class="home-main">
         <section>
             <p class="home-main-text">
-                CONOCE LAS NOVEDADES Y <br>
-                NOTICIAS DEL MUNDO TECNOLÓGICO
+                CONOCE LAS NOVEDADES Y NOTICIAS DEL MUNDO TECNOLÓGICO
             </p>
             <button class="home-main-button">
                 <a href="./blogs.html" class="home button">¡Entra ya!</a>
