Estilos en blogs html

--- a/blogs.html
+++ b/blogs.html
@@ -35,13 +35,13 @@
     <main class="blogs-main">
         <section class="blogs-news-container">
             <div class="blogs-main-new">
-                <h3></h3>
+                <h3>Soy titulo</h3>
                 <div class="blogs-news-img-container">
                     <img src="/" alt="">
                 </div>
                 <div class="blogs-news-info-container">
-                    <h2></h2>
-                    <p></p>
+                    <h2>Titulo blogspost</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus vitae rem reprehenderit sit corrupti consequuntur dolor in aut obcaecati dicta, expedita eius id facere odit maxime quo optio tempore magni!</p>
                     <a href="" class="blogs-button"></a>
                 </div>
             </div>
