Seccion de contactos

--- a/blog.html
+++ b/blog.html
@@ -52,17 +52,17 @@
         </section>
         <section class="contact-main-container">
             <div>
-                <img src="" alt="">
+                <img src="https://ucb6ae8db0aabde7f53d06813be4.previews.dropboxusercontent.com/p/thumb/ABOJenIUA47yijME1H72PVKf1BuPN9FXFM9SJImuNlOOJFSDwkweKpahPbKx5CCT4iGCioqnLVvRbEOR3Z2GsWu7TB0HkPl9MnhTv3jEeuH_meGcaxc9_t8ZpvsoWbCNCZks_6cFigEmU9tS2efEK7whGVk2sIcVumYJG6guQlndLbs2d1sIEJI-F4Bb_SGlt4k9qFDYGbd7WnqoVR_usCaNiCuSbviMjDZ8KlZRRkygRM-8g6iqDVXpdv14CJT-tU8O76aV1b6xYkElnFIgfYQpPF6htEdSEqoEMD94b9CnlKY45WYSxD3d6Xs-D-sbiCnLM-YYY1UOqDIBhUOBy7tWz6JiVRHjbhK_OGhLaHbsFQ/p.png?fv_content=true&size_mode=5" alt="">
                 <div class="contact-left">
-                    <a href=""></a>
-                    <p></p>
+                    <a href="">Contacto</a>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum, atque.</p>
                 </div>
             </div>
             <div>
-                <img src="" alt="">
+                <img src="https://uc443d14ba29d388f0609ed446a9.previews.dropboxusercontent.com/p/thumb/ABP9GgKAzO965TPWCocrfBcROlMQIdcEXVS1I23S5lI0Bza2KB5Q3BPiY6A1aY7YI-c0eIWtPc5MSLX8LrLchtXZCgs3iVhzHsNIUFIiKtII3BAcsX17yF-fZc8i494vDimuinqWMwu0MjZojhrNSZyWrO66hXoc1etWwaJWpq5-10Df3tbmROsAD9FEUZUe6LoCqamXRa6kwPIATud0bgbqcGmwm2q9Wn9WA935VjOrPBiERjClUQ2aPz6fQaXPUtqRerBrhJEXxIjSWq0Mp93n5oGYQg5owTHnA30T42xhU2v1hh--5h_roPtLaYAIkFZdsmhFxi4BdN-uvy6VgEKDu1slI3BWY1d4hOEE22JfpQ/p.png?fv_content=true&size_mode=5" alt="">
                 <div class="contact-right">
-                    <a href=""></a>
-                    <p></p>
+                    <a href="">Escribe</a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, nisi?</p>
                 </div>
             </div>
         </section>
