--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
     <title>Mi blog</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/font/flaticon.css">
+    <link rel="stylesheet" href="./css/media-queries.css">
 </head>
 
 <body>
@@ -23,7 +24,7 @@
         </section>
         <nav>
             <section class="nav-logo-container">
-                <a href=""><img
+                <a href="./index.html"><img
                         src="https://uc3a68edfd6d96b88ded70fa5e0a.previews.dropboxusercontent.com/p/thumb/ABPRI_uQnXVseOUheN5_bUSlYD9glQ7ILwAP5lbgiEL8j6-TfBjIds2v4A2Z8G3me-M6LT61dp6KZ6Pd0Mj55TesqqHHIduiN5KZgeMV185YLIxOuTE1o31Tshvj9s64bh3N-foSVFj9x6mOoYncXpM-RjkoCYihJQWho_QKhLmQV8Xfj7hJrL0z7PU_M8CuwsRPsblwQ70mEG0lKLvrftMuB6d2palaWSyw1SYtUU0byBekTuuJ9rpwpenxpk8GGSsW0V_VmLUeFA1maIPBisH8bHVl6N-zBm4hAKcsKEsl5PMxt45dqin3cEuGD0Bt2e42MO0-52AhFPGZh3vXtuEJNqfBIYixa0c2r-u5wSHETw/p.png?fv_content=true&size_mode=5"
                         alt="Logo de mi blog"></a>
             </section>
@@ -39,7 +40,7 @@
                     <img src="https://uc025d8d3299d85f79b60aa2753d.previews.dropboxusercontent.com/p/thumb/ABMsNq_ZnDDI8HrEV29NTGvNvPm-xmdfxu-E47KPJruIiU4R_a3m6mG3ExQC3-QkEbvkitKzqHDuG_N6ZmrT9Sq0YdIFcM94Xg1gzBcYhr9K_VT9y8TOuhBpjjZFyLlSwLywTTUzKJ6M2saJt5bAkHxxRyPDHGg9m_eamZ66mb7ciiKiguy_UZyeBPx36m5VuCGbQBwt4vzTu7AFjZ60g_QC8nHvULouXvKY7LUIjsDAD24-u13YuXf0lJceAxomlOQvLer9Y27SCifbgvHgpm818T2zQL0Op-tjpVPvwSiuPzjgsjNM7noL6GwVDNOZGO_siGbeR0q6RVRDO0CSdeIlLc444iqB17MLdSba21Sasg/p.jpeg?fv_content=true&size_mode=5" alt="">
                 </div>
                 <div>
-                    <h2>¡Hola!. Mi nombre es Pablo Gallegos</h2>
+                    <h2>¡Hola! Mi nombre es Pablo Gallegos</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam nobis ut provident. Autem ex esse a alias porro, nulla at enim modi similique incidunt velit accusantium blanditiis impedit tempore accusamus.</p>
                 </div>
             </div>
